--- a/senha_caixa_banco/src/App.css
+++ b/senha_caixa_banco/src/App.css
@@ -36,3 +36,29 @@
     transform: rotate(360deg);
   }
 }
+
+.app-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100vh;
+  align-items: center;
+}
+
+.button-row {
+  display: flex;
+  margin-bottom: 10px;
+}
+
+.options-container {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.options-description {
+  font-weight: bold;
+}
+
+.options {
+  font-size: 18px;
+}
